# Embedded-Face-Detector-System-on-Raspberry-Pi

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dataset_partition.txt
config/2_10/: 10weakcsecond.txt  2weakc.txt
dataset/: a.out  driver.cpp  utils.cpp  utils.h
dataset/dataset_processing_code/: a.out  driver.cpp  neg_convert_to_integral  neg_img_to_txt  pos_convert_to_integral  pos_img_to_txt  rename  run
dataset/good_txt/: face00005.txt  face00007.txt  face00011.txt  face00012.txt  face00015.txt  face00017.txt  face00018.txt  face00024.txt  face00025.txt  face00029.txt  face00031.txt  face00032.txt  face00035.txt  face00038.txt  face00041.txt  face00042.txt  face00044.txt  face00048.txt  face00049.txt  face00054.txt  face00057.txt  face00058.txt  face00060.txt  face00065.txt  face00068.txt  face00073.txt  face00074.txt  face00079.txt  face00093.txt  face00095.txt  face00096.txt  face00104.txt  face00111.txt  face00115.txt  face00117.txt  face00119.txt  face00121.txt  face00123.txt  face00124.txt  face00128.txt  (+863 more)
demo/: CMakeLists.txt  Makefile  cmake_install.cmake  demo.cpp  img_process  runme
demo/picture/: a.out  driver.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  makeme
src/actors/: classifier.cpp  classifier.h  read_config.cpp  read_config.h  result_write.cpp  result_write.h  txt_img_read.cpp  txt_img_read.h
src/build-raspi/: CMakeCache.txt  Makefile  cmake_install.cmake
src/graph/: graph.cpp  graph.h
src/utils/: .WeakClassifier.h.gch.icloud  .strongC.h.gch.icloud  .utils.h.gch.icloud  WeakClassifier.cpp  WeakClassifier.h  a.out  driver.cpp  o1.txt  o2.txt  output.txt  output1.txt  strongC.cpp  strongC.h  strongCdriver.cpp  test_WC_runme  utils.cpp  utils.h
test/test01/: a.out  makeme  makeme~  strongCtest.cpp  test_doc.txt
test/test02/: CMakeLists.txt  Makefile  cmake_install.cmake  config.txt  runme  test_run
test/test02/build-raspi/: CMakeCache.txt  Makefile  cmake_install.cmake
test/test03/: a.out  (+3 more)
test/test05/: CMakeLists.txt  Makefile  cmake_install.cmake  driver.cpp  output1.txt  output2.txt  runme  test_doc.txt  testrun
training/: WeakClassifier.cpp  WeakClassifier.h  h1.csv  h1.csv~  h2.csv  h2.csv~  hand.csv  hand_classifiers.csv  hand_classifiers.csv~  second_strongc.csv  second_strongc.csv~  train_weak.cpp  unique_classifiers.csv
(+7967 files in other folders)
